(* -*- tuareg -*- *)

let maybe_domain_shims =
  if Jbuild_plugin.V1.ocaml_version < "5" then "domain_shims" else ""

let () =
  Jbuild_plugin.V1.send
  @@ {|

(rule
 (enabled_if
  (< %{ocaml_version} 4.13.0))
 (action
  (copy int_ext.ocaml_lt_4_13.ml int_ext.ml)))

(rule
 (enabled_if
  (>= %{ocaml_version} 4.13.0))
 (action
  (copy int_ext.ocaml_ge_4_13.ml int_ext.ml)))

(library
 (public_name multicore-bench)
 (name multicore_bench)
 (libraries
  backoff
  multicore-magic
  domain-local-await
  mtime
  mtime.clock.os
  yojson
  str |}
  ^ maybe_domain_shims
  ^ {| ))

(mdx
 (libraries multicore-bench)
 (files multicore_bench.mli))
|}
